--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,55 @@
-venv/ 
-dist/ 
-build/ 
-__pycache__/ 
-Output/ 
-*.spec 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Testing
+.coverage
+coverage.xml
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+
+# Documentation
+docs/_build/
+
+# Whispa App specific
+.whispa/
+*.log
+models/
+*.spec
+
+# Windows installer
+*.exe
+*.msi
+*.msix
+*.msm
+*.msp
