--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,32 @@ whispa = "whispa_app.main:launch_app"
 
 [project.entry-points."console_scripts"]
 whispa_prefetch = "whispa_app.prefetch:main"
+
+[tool.black]
+line-length = 100
+target-version = ["py310"]
+include = '\.pyi?$'
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 100
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q --cov=whispa_app"
+testpaths = ["tests"]
